# entra-hygiene

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js
.github/scripts/: send_report.py
.github/workflows/: weekly-scan.yml
docker/: Dockerfile
entra_hygiene/: auth.py  cli.py  config.py  graph.py  models.py
entra_hygiene/checks/: apps.py  base.py  groups.py  policies.py  roles.py  users.py
entra_hygiene/reporters/: html_reporter.py  prometheus_reporter.py
grafana/: dashboard.json
scripts/: build_css.py
tests/: conftest.py  test_checks_apps.py  test_checks_groups.py  test_checks_policies.py  test_checks_roles.py  test_checks_users.py
