[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entra-hygiene"
version = "0.1.0"
description = "Automated Entra ID (Azure AD) tenant hygiene auditing tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "msal>=1.28",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
]

[project.scripts]
entra-hygiene = "entra_hygiene.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["entra_hygiene"]
